crates/marxml/tests/snapshots/fixture_suite__fixture_parse_failure@01-unclosed-tag.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: "format!(\"{}: {}\", error_kind(&err), err)"
input_file: crates/marxml/tests/fixtures/parse_fail/01-unclosed-tag.md
---
UnclosedTag: line 1: <task> has no matching </task>
