crates/marxml/tests/snapshots/fixture_suite__fixture_parse_failure@02-mismatched-close.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: "format!(\"{}: {}\", error_kind(&err), err)"
input_file: crates/marxml/tests/fixtures/parse_fail/02-mismatched-close.md
---
MismatchedClose: line 1: </a> does not match the most recent open tag <b>
