crates/marxml/tests/snapshots/fixture_suite__fixture_parse_failure@03-stray-close.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: "format!(\"{}: {}\", error_kind(&err), err)"
input_file: crates/marxml/tests/fixtures/parse_fail/03-stray-close.md
---
StrayClose: line 2: </nothing> has no matching open tag
