crates/marxml/tests/snapshots/fixture_suite__fixture_parse_failure@04-attr-no-quote.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: "format!(\"{}: {}\", error_kind(&err), err)"
input_file: crates/marxml/tests/fixtures/parse_fail/04-attr-no-quote.md
---
MalformedAttribute: line 1: malformed attribute on <task> — expected '"' to open value of id
