crates/marxml/tests/snapshots/fixture_suite__fixture_parse_failure@05-attr-no-equals.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: "format!(\"{}: {}\", error_kind(&err), err)"
input_file: crates/marxml/tests/fixtures/parse_fail/05-attr-no-equals.md
---
MalformedAttribute: line 1: malformed attribute on <task> — expected '=' after attribute id
