crates/marxml/tests/snapshots/fixture_suite__fixture_parse_failure@06-unterminated-attr-value.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: "format!(\"{}: {}\", error_kind(&err), err)"
input_file: crates/marxml/tests/fixtures/parse_fail/06-unterminated-attr-value.md
---
MalformedAttribute: line 1: malformed attribute on <task> — unterminated value of id
