crates/marxml/tests/snapshots/fixture_suite__fixture_parse_failure@07-duplicate-id-siblings.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: "format!(\"{}: {}\", error_kind(&err), err)"
input_file: crates/marxml/tests/fixtures/parse_fail/07-duplicate-id-siblings.md
---
DuplicateId: line 2: duplicate id="1" on <task>
